--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <button type="button" role="menuitem" data-action="zoomOut"><span class="ws-menuitem-label">Zoom out</span><span class="ws-menuitem-shortcut">Ctrl+-</span></button>
         <button type="button" role="menuitem" data-action="zoomReset"><span class="ws-menuitem-label">Reset zoom</span><span class="ws-menuitem-shortcut">Ctrl+0</span></button>
         <hr>
+        <button type="button" role="menuitem" data-action="theme"><span class="ws-menuitem-label">Theme…</span></button>
         <button type="button" role="menuitem" data-action="font"><span class="ws-menuitem-label">Font…</span></button>
       </div>
     </header>
@@ -55,6 +56,25 @@
       </div>
       <div id="ws-preview-wrap" class="ws-preview-wrap" aria-hidden="true">
         <div id="ws-preview" class="ws-preview"></div>
+      </div>
+    </div>
+    <!-- Theme chooser -->
+    <div id="ws-theme-dialog" class="ws-dialog-overlay" role="dialog" aria-label="Choose theme" aria-hidden="true">
+      <div class="ws-dialog-box">
+        <div class="ws-dialog-title">Theme</div>
+        <p class="ws-dialog-message">Choose the color theme for the editor and UI.</p>
+        <div class="ws-dialog-font-row">
+          <select id="ws-theme-select" class="ws-font-select" aria-label="Theme">
+            <option value="dark">Dark</option>
+            <option value="light">Light</option>
+            <option value="synthwave">Synthwave</option>
+            <option value="terminal">Green terminal</option>
+          </select>
+        </div>
+        <div class="ws-dialog-buttons">
+          <button type="button" class="ws-dialog-btn ws-dialog-btn-primary" data-theme-apply>Apply</button>
+          <button type="button" class="ws-dialog-btn" data-theme-cancel>Cancel</button>
+        </div>
       </div>
     </div>
     <!-- Font chooser -->
