--- a/web/index.html
+++ b/web/index.html
@@ -55,6 +55,8 @@
         <button type="button" role="menuitem" data-action="zoomOut"><span class="ws-menuitem-label">Zoom out</span><span class="ws-menuitem-shortcut">Ctrl+-</span></button>
         <button type="button" role="menuitem" data-action="zoomReset"><span class="ws-menuitem-label">Reset zoom</span><span class="ws-menuitem-shortcut">Ctrl+0</span></button>
         <hr>
+        <button type="button" role="menuitem" data-action="fullscreen"><span class="ws-menuitem-label">Fullscreen</span><span class="ws-menuitem-shortcut">F11</span></button>
+        <hr>
         <button type="button" role="menuitem" data-action="theme"><span class="ws-menuitem-label">Theme…</span></button>
         <button type="button" role="menuitem" data-action="font"><span class="ws-menuitem-label">Font…</span></button>
       </div>
